<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:minHeight="50dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fstack"
                android:textAlignment="center"
                android:textColor="@color/background3"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/num3"
            android:layout_width="100dp"
            android:layout_height="210dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:theme="@style/NumberPicker" />

        <NumberPicker
            android:id="@+id/num1"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:theme="@style/NumberPicker" />

        <NumberPicker
            android:id="@+id/num2"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:theme="@style/NumberPicker" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_layout_add"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_showNgay_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNgaychon_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ib_chonLich_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_calendar"
                android:padding="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_t2_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_radio_btn"
                android:button="@null"
                android:text="T2"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text" />

            <CheckBox
                android:id="@+id/cb_t3_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_radio_btn"
                android:button="@null"
                android:text="T3"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text" />

            <CheckBox
                android:id="@+id/cb_t4_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_radio_btn"
                android:button="@null"
                android:text="T4"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text" />

            <CheckBox
                android:id="@+id/cb_t5_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_radio_btn"
                android:button="@null"
                android:text="T5"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text" />

            <CheckBox
                android:id="@+id/cb_t6_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_radio_btn"
                android:button="@null"
                android:text="T6"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text" />

            <CheckBox
                android:id="@+id/cb_t7_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_radio_btn"
                android:button="@null"
                android:text="T7"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/trans_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_NgayketThuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/ib_ngayKetThuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_calendar"
                    android:padding="14dp" />

                <TextView
                    android:id="@+id/tv_ngayKetThuc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_HangTuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mượn phòng hàng tuần"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chọn ngày kết thúc đặt hàng tuần"
                    android:textAlignment="center"
                    android:textSize="13sp" />
            </LinearLayout>


            <Switch
                android:id="@+id/sw_hangTuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/trans_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtChonPhong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chon_phong_muon"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp_chonPhong"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:visibility="gone" />

            <Switch
                android:id="@+id/sw_chonPhong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/trans_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnThoat_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_click_item_add"
                android:text="@string/Thoat"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:textColor="@drawable/custom_text_enable"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/trans_background" />

            <TextView
                android:id="@+id/btnLuu_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_click_item_add"
                android:text="@string/Luu"
                android:textAlignment="center"
                android:textColor="@drawable/custom_text_enable"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>